// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertError should resolve a more limited AxiosRequestError 1`] = `[AxiosRequestError: Axios Request Handler encountered an error]`;

exports[`convertError should resolve a more limited AxiosRequestError 2`] = `
Object {
  "auth": undefined,
  "host": "host",
  "method": "method",
  "path": "path",
  "protocol": "protocol",
  "timeout": 0,
  "url": "url",
}
`;

exports[`convertError should resolve a more limited AxiosRequestError 3`] = `
Object {
  "message": "message",
  "name": "name",
}
`;

exports[`convertError should resolve a more limited AxiosRequestError 4`] = `"details"`;

exports[`convertError should resolve a more limited AxiosRequestError 5`] = `"code"`;

exports[`convertError should resolve a more limited AxiosRequestError 6`] = `
Object {
  "data": true,
}
`;

exports[`convertError should resolve a more limited AxiosRequestError 7`] = `
Object {
  "data": Object {
    "data": true,
  },
  "headers": Object {
    "headers": true,
  },
  "params": Object {
    "params": true,
  },
}
`;

exports[`convertError should resolve a more limited AxiosRequestError 8`] = `
Object {
  "data": Object {
    "error": Object {
      "code": "code",
      "data": Object {
        "data": true,
      },
      "details": "details",
      "message": "message",
      "name": "name",
      "title": "title",
    },
  },
  "headers": Object {
    "headers": true,
  },
  "status": 500,
  "statusText": "statusText",
}
`;

exports[`convertError should resolve a more limited AxiosRequestError 9`] = `500`;

exports[`convertError should resolve a more limited AxiosRequestError 10`] = `"title"`;
